--- a/src/main.css
+++ b/src/main.css
@@ -126,6 +126,7 @@ figure {
 
 .Highlight {
   stroke: #08306B;
+  stroke-width: 2.25px;
 }
 
 
@@ -164,6 +165,10 @@ figure {
   font-size: 1.5rem;
   text-align: center;
   margin-top: 75px;
+}
+
+#uninsuredTotal {
+  margin-bottom: 30px;
 }
 
 
